--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -3,7 +3,87 @@
 // See https://github.com/atom/atom-dark-ui/blob/master/styles/ui-variables.less
 // for a full listing of what's available.
 @import "ui-variables";
+archipelago {
+@media (min-resolution: 2dppx) {
+  * {
+      text-rendering: geometricPrecision;
+  }
+}
 
+/* scrollbar */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background: #666;
+}
+::-webkit-scrollbar, ::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+}
+.xterm .xterm-viewport {
+  -webkit-transition: all .5s;
+  opacity: 0;
+}
+.xterm .xterm-viewport:hover, .xterm.scrolling .xterm-viewport {
+  opacity: 1;
+ -webkit-transition: all .5s;
+}
+
+archipelago-terminal {
+  display: flex;
+  margin: 0px 0px 10px 15px;
+  width: calc(100% - 15px);
+  height: calc(100% - 10px);
+}
+.terminal {
+  width: 100%;
+}
+.xterm {
+  background-color: transparent;
+}
+.terminal .xterm-viewport {
+  background-color: transparent;
+}
+
+/* Panes */
+archipelago-pane-list archipelago-pane {
+  margin: 0px;
+  overflow-y: hidden;
+  display: block;
+  height: calc(100% - 10px);
+  position: relative;
+}
+
+/* Splitting */
+.Resizer.horizontal, .Resizer.vertical {
+  background-color: var(--background-color);
+  filter: invert(50%);
+  box-sizing: border-box;
+  z-index: 1;
+  background-clip: padding-box;
+  flex-shrink: 0;
+}
+.Resizer.horizontal {
+  height: 11px;
+  border-top: 5px solid rgba(255, 255, 255, 0);
+  border-bottom: 5px solid rgba(255, 255, 255, 0);
+  cursor: row-resize;
+  width: 100%;
+  /* margin-top: 5px;
+  margin-bottom: 5px; */
+}
+.Pane.Pane2.horizontal {
+  display: flex;
+}
+.Resizer.vertical {
+  width: 11px;
+  margin: 0 -5px;
+  /* margin-right: 10px; */
+  border-left: 5px solid rgba(255, 255, 255, 0);
+  border-right: 5px solid rgba(255, 255, 255, 0);
+  cursor: col-resize;
+}
+}
 archipelago-terminal {
   height: 100%;
   .xterm {
