--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -5,6 +5,7 @@
 @import "ui-variables";
 
 .archipelago {
+  background-color: var(--archipelago-background-color);
   archipelago-pane {
     background: #282c35;
     margin: 0px;
@@ -15,7 +16,7 @@
 
     /* Splitting */
     .Resizer.horizontal, .Resizer.vertical {
-      background-color: var(--background-color);
+      background-color: var(--archipelago-background-color);
       filter: invert(50%);
       box-sizing: border-box;
       z-index: 1;
@@ -35,7 +36,6 @@
     .Resizer.vertical {
       width: 11px;
       margin: 0 -5px;
-      /* margin-right: 10px; */
       border-left: 5px solid rgba(255, 255, 255, 0);
       border-right: 5px solid rgba(255, 255, 255, 0);
       cursor: col-resize;
