Dont allow the window to be drug inside the terminal so you can still highlight

--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -6,6 +6,7 @@
 
 .archipelago {
   background-color: var(--archipelago-background-color);
+  -webkit-app-region: no-drag;
   archipelago-pane {
     background: #282c35;
     margin: 0px;
