Utilize xterms fit addon and remove guessing on fitting terminal

--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -45,9 +45,8 @@
     archipelago-terminal {
       height: 100%;
       display: flex;
+      flex: 1;
       margin: 5px 0px 10px 15px;
-      width: ~"calc(100% - 15px)";
-      height: ~"calc(100% - 15px)";
 
       ::-webkit-scrollbar-track {
         background: var(--archipelago-background-color);
