Combine window background and terminal background

--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -8,7 +8,7 @@
   background-color: var(--archipelago-background-color);
   -webkit-app-region: no-drag;
   archipelago-pane {
-    background: #282c35;
+    background-color: var(--archipelago-background-color);
     margin: 0px;
     overflow-y: hidden;
     display: block;
