--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -46,7 +46,6 @@
       height: 100%;
       display: flex;
       flex: 1;
-      margin: 5px 0px 10px 15px;
 
       ::-webkit-scrollbar-track {
         background: var(--archipelago-background-color);
@@ -63,6 +62,7 @@
         -ms-user-select: none;
         -webkit-user-select: none;
         height: 100%;
+        padding: 5px 0px 10px 15px;
       }
 
       .xterm.focus, .xterm:focus {
