Add new options xterm options, fit weird cursor height, use new dispose function on xterm instance

--- a/styles/archipelago.less
+++ b/styles/archipelago.less
@@ -9,10 +9,9 @@
   -webkit-app-region: no-drag;
   archipelago-pane {
     background-color: var(--archipelago-background-color);
-    margin: 0px;
     overflow-y: hidden;
     display: block;
-    height: ~"calc(100% - 10px)";
+    height: 100%;
     position: relative;
 
     /* Splitting */
@@ -61,7 +60,6 @@
         user-select: none;
         -ms-user-select: none;
         -webkit-user-select: none;
-        height: 100%;
         padding: 5px 0px 10px 15px;
       }
 
@@ -137,11 +135,17 @@
         visibility: hidden;
       }
 
-      .xterm .xterm-char-measure-element {
+      .xterm-char-measure-element {
         display: inline-block;
         visibility: hidden;
         position: absolute;
+        top: 0;
         left: -9999em;
+        line-height: normal;
+      }
+
+      .xterm {
+        cursor: text;
       }
 
       .xterm.enable-mouse-events {
@@ -149,8 +153,26 @@
         cursor: default;
       }
 
-      .xterm:not(.enable-mouse-events) {
-        cursor: text;
+      .xterm.xterm-cursor-pointer {
+        cursor: pointer;
+      }
+
+      .xterm .xterm-accessibility, .xterm .xterm-message {
+        position: absolute;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        z-index: 100;
+        color: transparent;
+      }
+
+      .xterm .live-region {
+        position: absolute;
+        left: -9999px;
+        width: 1px;
+        height: 1px;
+        overflow: hidden;
       }
 
       // overrides
